Fix width of 'full' images in blog posts
At 'md' width only, 'full' width images in blog posts, which use the
single column, were too wide. Because when we changed the number
of columns the single column uses at that width, we didn't change
the calculations for the full width images.

Fixes #174

--- a/hines/static/hines/src/sass/_variables.scss
+++ b/hines/static/hines/src/sass/_variables.scss
@@ -110,6 +110,7 @@ $grid-max-width:            1140px;
 
 // Main content:
 $main-columns:              10;
+$main-columns-md:           12; // Variation for one particular width.
 
 // Sidebar:
 $sub-columns:               5;
